test map corner bug fix on mobile 3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,6 +283,9 @@ button {
 #personality-div,
 #country-map-div {
     border-radius: 24px;
+    -webkit-border-radius: 24px;
+    -moz-border-radius: 24px;
+    -o-border-radius: 24px;
 }
 
 #personality-heading {
